--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,9 @@
 		<title>Webpack App</title>
 		<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-	<link href="/app.css" rel="stylesheet"></head>
+	<link href="/dist/app.css" rel="stylesheet"></head>
 	<body>
 		<!--<img src="img/haha.jpg" />-->
 		<div id="app">aa</div>
-	<script type="text/javascript" src="/app-bundle.js"></script></body>
+	<script type="text/javascript" src="/dist/app-bundle.js"></script></body>
 </html>
