--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Webpack App</title>
-		<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	<link href="/dist/app.css" rel="stylesheet"></head>
 	<body>
 		<!--<img src="img/haha.jpg" />-->
 		<div id="app">aa</div>
-	<script type="text/javascript" src="/dist/app-bundle.js"></script></body>
+	<script type="text/javascript" src="/dist/app-bundle.js"></script><script type="text/javascript" src="/dist/vendors-bundle.js"></script></body>
 </html>
