--- a/views/demo.html
+++ b/views/demo.html
@@ -38,32 +38,33 @@ iframe {
 <body>
 
 <div class="box">
-727742133793_5c470db985e2b0.11404064_35bc845ba54f0a53bf7132829909b7441b033454
-CBB900098
 	<div class="item">1</div>
 	<div class="item">2</div>
 	<br>
 	<h2>shein</h2>
-	<!--<form action="https://pc3.shein.com/ltspc/transformer/XCY900098" method="post">-->
-	<form action="http://localhost:3008/ltspc/transformer/XCY900098" method="post">-->
-		siteuid<input name="SiteUID" value="m" />
-		token<input name="Token" value="727742133793_5c470db985e2b0.11404064_35bc845ba54f0a53bf7132829909b7441b033454" />
+	<!--<form action="https://pc3.shein.com/ltspc/transformer/CAY900099" method="post">-->
+	<!--<form action="https://m3.sheinoutlet.com/ltspc/transformer/CAY900099" method="post">-->
+	<--<form action="http://localhost:3008/ltspc/transformer/KKC50145" method="post">-->
+	<!--<form action="https://m3.sheinoutlet.com/ltspc/transformer/CAY900099" method="post">-->
+		siteuid<input name="SiteUID" value="msus" />
+		token<input name="Token" value="133618012598_5c7652a143d056.69468274_7ac904e918b1dcedfb152335c87f732ceebbb853" />
 		applanguage<input name="AppLanguage" value="en" />
 		appcurrency<input name="AppCurrency" value="USD" />
 
 		paycode<input name="payCode" value="worldpay-card" />
 		语言文件lang<input name="lang" value="en" />
-		sitefrom<input name="siteFrom" value="m" />
-		email<input name="email" value="aa@123.com" />
-		nickname<input name="nickname" value="aa" />
+		sitefrom<input name="siteFrom" value="msus" />
+		email<input name="email" value="xgquan@dotfashion.cn" />
+		nickname<input name="nickname" value="xgquan" />
+		originSite<input name="originSite" value="https://sus3.sheinoutlet.com" />
 		<button type="submit">submit</button>
 	</form>
 
 	<h2>romwe</h2>
 	<!--<form action="https://pc3.romwe.com/ltspc/transformer/RWLXZ44877" method="post">-->
-	<--<form action="http://localhost:3007/ltspc/transformer/RWLXZ44877" method="post">-->
+	<--<form action="http://localhost:3007/ltspc/transformer/RWXXB44877" method="post">-->
         siteuid<input name="SiteUID" value="rw" />
-        token<input name="Token" value="371619560285_5c467bef103cc5.96326273_629deb760e57d119a17be6ca034304a4d44633f7" />
+        token<input name="Token" value="905319560285_5c6a5b78757661.94395748_adef82d6ea78a8376b765300f887a99f0776e9a3" />
         applanguage<input name="AppLanguage" value="en" />
         appcurrency<input name="AppCurrency" value="USD" />
 
@@ -72,6 +73,7 @@ CBB900098
         sitefrom<input name="siteFrom" value="pc" />
 		email<input name="email" value="aa@123.com" />
 		nickname<input name="nickname" value="aa" />
+		originSite<input name="originSite" value="https://pc3.romwe.com" />
         <button type="submit">submit</button>
     </form>
 	
