--- a/views/demo.html
+++ b/views/demo.html
@@ -42,38 +42,37 @@ iframe {
 	<div class="item">2</div>
 	<br>
 	<h2>shein</h2>
-	<!--<form action="https://pc3.shein.com/ltspc/transformer/CAY900099" method="post">-->
-	<!--<form action="https://m3.sheinoutlet.com/ltspc/transformer/CAY900099" method="post">-->
-	<--<form action="http://localhost:3008/ltspc/transformer/KKC50145" method="post">-->
-	<!--<form action="https://m3.sheinoutlet.com/ltspc/transformer/CAY900099" method="post">-->
-		siteuid<input name="SiteUID" value="msus" />
-		token<input name="Token" value="133618012598_5c7652a143d056.69468274_7ac904e918b1dcedfb152335c87f732ceebbb853" />
-		applanguage<input name="AppLanguage" value="en" />
+	<!-- 生产环境<form action="http://localhost:3008/ltspc/transformer/LYP51563" method="post">-->
+	<-- 测试环境<form action="http://localhost:3008/ltspc/transformer/XZZ900112" method="post">-->
+		siteuid<input name="SiteUID" value="www" />
+		<!-- token 生产<input name="Token" value="208818012598_5c86009bd112e6.11259159_f9274730553536430767e39501e0f15ea4dc5816" /> -->
+		<-- token 测试<input name="Token" value="415042133793_5c86035bd87604.85631408_ad48a8f3d3357bac432c0a501ec4893cdc2bb0eb" /> -->
+		<!--applanguage<input name="AppLanguage" value="en" />-->
 		appcurrency<input name="AppCurrency" value="USD" />
 
 		paycode<input name="payCode" value="worldpay-card" />
 		语言文件lang<input name="lang" value="en" />
-		sitefrom<input name="siteFrom" value="msus" />
+		sitefrom<input name="siteFrom" value="pc" />
 		email<input name="email" value="xgquan@dotfashion.cn" />
 		nickname<input name="nickname" value="xgquan" />
-		originSite<input name="originSite" value="https://sus3.sheinoutlet.com" />
+		originSite<input name="originSite" value="http://localhost:3008" />
 		<button type="submit">submit</button>
 	</form>
 
 	<h2>romwe</h2>
 	<!--<form action="https://pc3.romwe.com/ltspc/transformer/RWLXZ44877" method="post">-->
-	<--<form action="http://localhost:3007/ltspc/transformer/RWXXB44877" method="post">-->
-        siteuid<input name="SiteUID" value="rw" />
-        token<input name="Token" value="905319560285_5c6a5b78757661.94395748_adef82d6ea78a8376b765300f887a99f0776e9a3" />
+	<--<form action="http://localhost:3007/uk/ltspc/transformer/RWXYA40881" method="post">-->
+        siteuid<input name="SiteUID" value="rwmuk" />
+        token<input name="Token" value="57515954957_5c8a0e1232e1e8.59591097_55e527934d58f9efdb59ef818694b50d7359f855" />
         applanguage<input name="AppLanguage" value="en" />
         appcurrency<input name="AppCurrency" value="USD" />
 
         paycode<input name="payCode" value="worldpay-card" />
         语言文件lang<input name="lang" value="en" />
-        sitefrom<input name="siteFrom" value="pc" />
+        sitefrom<input name="siteFrom" value="m" />
 		email<input name="email" value="aa@123.com" />
 		nickname<input name="nickname" value="aa" />
-		originSite<input name="originSite" value="https://pc3.romwe.com" />
+		originSite<input name="originSite" value="http://localhost:3007/uk" />
         <button type="submit">submit</button>
     </form>
 	
